manifests/operators/postgres-operator.yaml
---
# Source: postgres-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator
    helm.sh/chart: postgres-operator-1.10.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator
  name: postgres-operator
  namespace: postgres-operator
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: postgres-operator
    app.kubernetes.io/name: postgres-operator
---
# Source: postgres-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator
    helm.sh/chart: postgres-operator-1.10.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator
  name: postgres-operator
  namespace: postgres-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator
      app.kubernetes.io/instance: postgres-operator
  template:
    metadata:
      annotations:
        checksum/config: 4ec051cd8ae7cd3340f1d310829d1bbac14e2e230e0e9192963ac57be645f621
      labels:
        app.kubernetes.io/name: postgres-operator
        app.kubernetes.io/instance: postgres-operator
    spec:
      serviceAccountName: postgres-operator
      containers:
      - name: postgres-operator
        image: "registry.opensource.zalan.do/acid/postgres-operator:v1.10.0"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 250Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      affinity:
        {}
      nodeSelector:
        {}
      tolerations:
        []
