manifests/operators/mariadb-operator.yaml
---
# Source: mariadb-operator/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.19.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
    
    app.kubernetes.io/version: "v0.0.19"
    
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 10250
  selector:
    
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
---
# Source: mariadb-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-operator
  labels:
    
    helm.sh/chart: mariadb-operator-0.19.0
    app.kubernetes.io/name: mariadb-operator
    app.kubernetes.io/instance: mariadb-operator
    app.kubernetes.io/version: "v0.0.19"
    app.kubernetes.io/managed-by: Helm
spec:
  
  selector:
    matchLabels:
      
      app.kubernetes.io/name: mariadb-operator
      app.kubernetes.io/instance: mariadb-operator
  template:
    metadata:
      
      labels:
        
        app.kubernetes.io/name: mariadb-operator
        app.kubernetes.io/instance: mariadb-operator
    spec:
      serviceAccountName: mariadb-operator
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 10
      
      
      
      
      containers:
        - image: "ghcr.io/mariadb-operator/mariadb-operator:v0.0.19"
          imagePullPolicy: IfNotPresent
          name: controller
          args:
            - --metrics-addr=:8080
            - --log-level=INFO
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          resources:
            
            requests:
              memory: 64Mi
---
# Source: mariadb-operator/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.19.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
    
    app.kubernetes.io/version: "v0.0.19"
    
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      
      app.kubernetes.io/name: mariadb-operator-webhook
      app.kubernetes.io/instance: mariadb-operator
  template:
    metadata:
      
      labels:
        
        app.kubernetes.io/name: mariadb-operator-webhook
        app.kubernetes.io/instance: mariadb-operator
    spec:
      serviceAccountName: mariadb-operator-webhook
      automountServiceAccountToken: true
      
      
      
      
      hostNetwork: false
      containers:
        - image: "ghcr.io/mariadb-operator/mariadb-operator:v0.0.19"
          imagePullPolicy: IfNotPresent
          name: webhook
          args:
            - webhook
            - --cert-dir=/tmp/k8s-webhook-server/serving-certs
            - --port=10250
            - --metrics-addr=:8080
            - --health-addr=:8081
            - --log-level=INFO
          ports:
            - containerPort: 10250
              protocol: TCP
              name: https
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 8081
              protocol: TCP
              name: health
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          
          
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: mariadb-operator-webhook-default-cert
---
# Source: mariadb-operator/templates/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.19.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
    
    app.kubernetes.io/version: "v0.0.19"
    
    app.kubernetes.io/managed-by: Helm
  annotations:
    
    
    
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: mariadb-operator-webhook
      namespace: mariadb-operator
      path: /mutate-mariadb-mmontes-io-v1alpha1-mariadb
    
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNVY2 [...]
    
  failurePolicy: Fail
  name: mmariadb.kb.io
  rules:
  - apiGroups:
    - mariadb.mmontes.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbs
  sideEffects: None
---
# Source: mariadb-operator/templates/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: mariadb-operator-webhook
  labels:
    
    helm.sh/chart: mariadb-operator-0.19.0
    app.kubernetes.io/name: mariadb-operator-webhook
    app.kubernetes.io/instance: mariadb-operator
    
    app.kubernetes.io/version: "v0.0.19"
    
    app.kubernetes.io/managed-by: Helm
  annotations:
    
    
    
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-backup
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vbackup.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-connection
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vconnection.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - connections
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-database
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vdatabase.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - databases
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-grant
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vgrant.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - grants
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-mariadb
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vmariadb.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - mariadbs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-restore
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vrestore.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restores
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-sqljob
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vsqljob.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sqljobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: mariadb-operator
        path: /validate-mariadb-mmontes-io-v1alpha1-user
      
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lRQnNRMy92TktNUnpVY0dEelVMbENTekFOQmdrcWhraUc5dzBCQVFzRkFEQWIKTVJrd0Z3WURWUVFERXhCdFlYSnBZV1JpTFc5d1pYSmhkRzl5TUI0WERUSXpNRGd5TVRBek1qWXhPVm9YRFRJMApNRGd5TURBek1qWXhPVm93R3pFWk1CY0dBMVVFQXhNUWJXRnlhV0ZrWWkxdmNHVnlZWFJ2Y2pDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUx3akhtYkpOZ2hGRndvSmtKOG5nYk9HVmdJRk1nNkkKcnVyRlFNQjFkWDRFRFlJSnk0b3MvdW05MDN1dDFBNkIwQ1NGdlpramtRKy9OZGdDOGxWY2VsZ1FSSjRyWXVCZwpHOElKOFp0VDNV [...]
      
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - mariadb.mmontes.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
